[project]
name = "cndi"
version = "2.7.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "hvac>=2.4.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",

]

[dependency-groups]
test = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]


[pytest]
log_cli = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"